# MG_motor_ws

./: 2motor.py  Control_Motor.py  MG_motor_connect.py  Module_motor_connect copy.py  Module_motor_connect.py  Normal_Motor_Connect.py  Only_Single_Loop_control.py  Single_Input.py  motor_connect.py  motor_module.py  motor_move.py  test.py
Junk/: Module_motor_connect copy.py  Module_motor_connect.py  Only_Single_Loop_control.py  motor_connect.py  test.py
etc/: Normal_Motor_Connect.py
etc/Junk/: motor_module.py  motor_move.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/MG_Motor_test/lib/MG_Motor_test/: MG_Motor_Connect.py
install/MG_Motor_test/share/MG_Motor_test/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/MG_Motor_test/: setup.cfg  setup.py
src/MG_Motor_test/MG_Motor_test/: MG_Motor_Connect.py  Motor_SDK.py
