<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>MG_Motor_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jyw010704@naver.com">pc</maintainer>
  <license>TODO: License declaration</license>

  <depend>std_msgs</depend>
  <depend>rcply</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
